--- a/index-barcode.html
+++ b/index-barcode.html
@@ -14,7 +14,6 @@ content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://unpkg.com/@ericblade/quagga2/dist/quagga.min.js"></script>
 
-   
 <style>
 /* =========================================================
    RESET + BASE
@@ -194,22 +193,20 @@ button.loading::after {
    CAMERA / LEITOR
 ========================================================= */
 #camera {
+  display: none;
   width: 100%;
   height: 260px;
   margin-top: 14px;
   border-radius: 18px;
   overflow: hidden;
   background: #000;
-  position: relative;
 }
 
-#camera video,
-#camera canvas {
-  width: 100% !important;
-  height: 100% !important;
+#camera video {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
-
 
 #codigoLido {
   margin-top: 8px;
@@ -298,6 +295,12 @@ tbody tr:nth-child(even) {
   background: #fecaca;
 }
 
+/* =========================================================
+   UTILIDADES
+========================================================= */
+.hidden {
+  display: none !important;
+}
 
 </style>
 </head>
@@ -353,9 +356,7 @@ tbody tr:nth-child(even) {
 <button class="btn-primary" id="btnOpenCamera">Abrir câmera</button>
 <button class="btn-muted hidden" id="btnCloseCamera">Fechar câmera</button>
 
-<div id="camera">
-  <div id="cameraViewport"></div>
-</div>
+<div id="camera"></div>
 <div id="codigoLido"></div>
 
 <label>Produto</label>
@@ -416,9 +417,6 @@ const barcodeInput = document.getElementById("barcode");
 const btnManual = document.getElementById("btnManual");
 const btnOpenCamera = document.getElementById("btnOpenCamera");
 const btnCloseCamera = document.getElementById("btnCloseCamera");
-// ✅ ELEMENTOS DA CÂMERA (ESTAVA FALTANDO)
-const camera = document.getElementById("camera");
-const codigoLido = document.getElementById("codigoLido");
 
 function aplicarModoBusca() {
   const modo = modoBuscaEl.value;
@@ -522,67 +520,25 @@ if (j?.produto) {
  }catch{}
 }
 
-/* ===== CAMERA (CORRIGIDA) ===== */
-btnOpenCamera.onclick = () => {
-  camera.classList.remove("hidden");
-
-  btnOpenCamera.classList.add("hidden");
-  btnCloseCamera.classList.remove("hidden");
-  codigoLido.textContent = "Abrindo câmera...";
-
-  Quagga.init({
-    inputStream: {
-      type: "LiveStream",
-target: document.getElementById("cameraViewport"),
-      constraints: {
-        facingMode: "environment",
-        width: { ideal: 1280 },
-        height: { ideal: 720 }
-      }
-    },
-    locator: {
-      patchSize: "medium",
-      halfSample: true
-    },
-    numOfWorkers: navigator.hardwareConcurrency || 4,
-    decoder: {
-      readers: [
-        "ean_reader",
-        "ean_8_reader",
-        "upc_reader",
-        "code_128_reader"
-      ]
-    },
-    locate: true
-  }, function (err) {
-    if (err) {
-      console.error("Erro câmera:", err);
-      alert("Erro ao acessar a câmera");
-      codigoLido.textContent = "Erro ao abrir câmera";
-      return;
-    }
-
-    Quagga.start();
-    codigoLido.textContent = "Aponte para o código de barras";
-  });
-
-  Quagga.offDetected();
-  Quagga.onDetected(result => {
-    if (!result?.codeResult?.code) return;
-    buscarProduto(normalizar(result.codeResult.code));
-  });
+/* ===== CAMERA ===== */
+btnOpenCamera.onclick=()=>{
+ camera.style.display="block";
+ btnOpenCamera.classList.add("hidden");
+ btnCloseCamera.classList.remove("hidden");
+ codigoLido.textContent="";
+ Quagga.init({
+  inputStream:{type:"LiveStream",target:camera,constraints:{facingMode:"environment"}},
+  decoder:{readers:["ean_reader","ean_8_reader","upc_reader","code_128_reader"]}
+ },()=>Quagga.start());
+ Quagga.onDetected(r=>buscarProduto(normalizar(r.codeResult.code)));
 };
-
-btnCloseCamera.onclick = fecharCamera;
-
-function fecharCamera() {
-  try { Quagga.stop(); } catch(e){}
-  camera.style.display = "none";
-  btnOpenCamera.classList.remove("hidden");
-  btnCloseCamera.classList.add("hidden");
-  codigoLido.textContent = "";
+btnCloseCamera.onclick=fecharCamera;
+function fecharCamera(){
+ Quagga.stop();
+ camera.style.display="none";
+ btnOpenCamera.classList.remove("hidden");
+ btnCloseCamera.classList.add("hidden");
 }
-
 btnManual.onclick = () => {
   const modo = modoBuscaEl.value;
 
