--- a/index-barcode.html
+++ b/index-barcode.html
@@ -193,14 +193,25 @@ button.loading::after {
    CAMERA / LEITOR
 ========================================================= */
 #camera {
-  display: none;
   width: 100%;
   height: 260px;
   margin-top: 14px;
   border-radius: 18px;
   overflow: hidden;
   background: #000;
+  position: relative;
 }
+
+#camera.hidden {
+  display: none;
+}
+
+#camera video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 #camera video {
   width: 100%;
@@ -356,7 +367,9 @@ tbody tr:nth-child(even) {
 <button class="btn-primary" id="btnOpenCamera">Abrir câmera</button>
 <button class="btn-muted hidden" id="btnCloseCamera">Fechar câmera</button>
 
-<div id="camera"></div>
+<div id="camera">
+  <video autoplay muted playsinline></video>
+</div>
 <div id="codigoLido"></div>
 
 <label>Produto</label>
@@ -417,6 +430,8 @@ const barcodeInput = document.getElementById("barcode");
 const btnManual = document.getElementById("btnManual");
 const btnOpenCamera = document.getElementById("btnOpenCamera");
 const btnCloseCamera = document.getElementById("btnCloseCamera");
+const camera = document.getElementById("camera");
+const video = camera.querySelector("video");
 
 function aplicarModoBusca() {
   const modo = modoBuscaEl.value;
@@ -521,24 +536,64 @@ if (j?.produto) {
 }
 
 /* ===== CAMERA ===== */
-btnOpenCamera.onclick=()=>{
- camera.style.display="block";
- btnOpenCamera.classList.add("hidden");
- btnCloseCamera.classList.remove("hidden");
- codigoLido.textContent="";
- Quagga.init({
-  inputStream:{type:"LiveStream",target:camera,constraints:{facingMode:"environment"}},
-  decoder:{readers:["ean_reader","ean_8_reader","upc_reader","code_128_reader"]}
- },()=>Quagga.start());
- Quagga.onDetected(r=>buscarProduto(normalizar(r.codeResult.code)));
+btnOpenCamera.onclick = async () => {
+  camera.classList.remove("hidden");
+  btnOpenCamera.classList.add("hidden");
+  btnCloseCamera.classList.remove("hidden");
+  codigoLido.textContent = "";
+
+  // ⏳ garante que o elemento está visível
+  await new Promise(r => setTimeout(r, 200));
+
+  Quagga.init({
+    inputStream: {
+      type: "LiveStream",
+      target: video, // ✅ VIDEO (OBRIGATÓRIO)
+      constraints: {
+        facingMode: { ideal: "environment" },
+        width: { ideal: 1280 },
+        height: { ideal: 720 }
+      }
+    },
+    locator: {
+      patchSize: "medium",
+      halfSample: true
+    },
+    numOfWorkers: navigator.hardwareConcurrency || 4,
+    decoder: {
+      readers: [
+        "ean_reader",
+        "ean_8_reader",
+        "upc_reader",
+        "code_128_reader"
+      ]
+    },
+    locate: true
+  }, err => {
+    if (err) {
+      console.error("Erro ao iniciar câmera:", err);
+      alert("Erro ao acessar a câmera");
+      return;
+    }
+    Quagga.start();
+  });
+
+  Quagga.offDetected();
+  Quagga.onDetected(result => {
+    const code = result.codeResult.code;
+    buscarProduto(normalizar(code));
+  });
 };
-btnCloseCamera.onclick=fecharCamera;
-function fecharCamera(){
- Quagga.stop();
- camera.style.display="none";
- btnOpenCamera.classList.remove("hidden");
- btnCloseCamera.classList.add("hidden");
+
+btnCloseCamera.onclick = fecharCamera;
+
+function fecharCamera() {
+  try { Quagga.stop(); } catch(e){}
+  camera.classList.add("hidden");
+  btnOpenCamera.classList.remove("hidden");
+  btnCloseCamera.classList.add("hidden");
 }
+
 btnManual.onclick = () => {
   const modo = modoBuscaEl.value;
 
@@ -733,7 +788,6 @@ function limparBuscaParaNovoRegistro() {
 
   // Fecha câmera se estiver aberta
   try { Quagga.stop(); } catch(e){}
-  camera.style.display = "none";
   btnOpenCamera.classList.remove("hidden");
   btnCloseCamera.classList.add("hidden");
 }
